--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -16,3 +16,10 @@ n33:
   email: aj@n33.co
   url: http://html5up.net
   avatar: https://pbs.twimg.com/profile_images/656346837733912576/Mr2blC1B.png
+
+blue:
+  name: blue
+  bio: The orb.
+  email: blueclock@gmail.copm
+  url: https://clockcrew.co
+  avatar: http://i.imgur.com/ewf2RWs.jpg
